--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -1,33 +1,41 @@
-# Production Requirements for MediDoc Q&A
-# Optimized for deployment (no dev dependencies)
+langchain==0.1.0
+langchain-openai==0.0.2
+langchain-community==0.0.10
+openai==1.6.1
 
-# Core Dependencies - RAG Framework
-langchain>=0.1.0
-langchain-openai>=0.0.2
-langchain-community>=0.0.10
-openai>=1.6.1
+faiss-cpu==1.7.4
 
-# Vector Store
-faiss-cpu>=1.13.2
+pypdf2==3.0.1
+pdfplumber==0.10.3
+python-multipart==0.0.6
 
-# Document Processing
-pypdf2>=3.0.1
-pdfplumber>=0.10.3
-python-multipart>=0.0.6
+sentence-transformers==2.2.2
+transformers==4.36.2
+torch==2.1.2
 
-# API Framework
-fastapi>=0.108.0
-uvicorn[standard]>=0.25.0
-pydantic>=2.5.3
-pydantic-settings>=2.1.0
+fastapi==0.108.0
+uvicorn[standard]==0.25.0
+pydantic==2.5.3
+pydantic-settings==2.1.0
 
-# Frontend
-streamlit>=1.29.0
+streamlit==1.29.0
+streamlit-chat==0.1.1
 
-# Utilities
-python-dotenv>=1.0.0
-tiktoken>=0.5.2
-tenacity>=8.2.3
+python-dotenv==1.0.0
+numpy==1.24.3
+pandas==2.1.4
 
-# Logging
-loguru>=0.7.2
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+httpx==0.25.2
+
+black==23.12.1
+flake8==7.0.0
+mypy==1.8.0
+
+python-json-logger==2.0.7
+loguru==0.7.2
+
+tenacity==8.2.3 
+tiktoken==0.5.2  
